--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -361,6 +361,23 @@
             <a asp-controller="Home" asp-action="Register">Sign Up</a>
         </div>
     </form>
+    
+
+    <div class="theme-switcher">
+        <div class="ts-header">
+            <span class="ts-title">Switch theme</span>
+            <div class="ts-closebtn">
+                <i class="bi bi-x-lg"></i>
+            </div>
+        </div>
+        <ul>
+            <li data-themeval="darkmode">Dark mode <i class="bi bi-check-lg active"></i></li>
+            <li data-themeval="lightmode">Light mode <i class="bi bi-check-lg"></i></li>
+            <li data-themeval="customtheme1">Custom theme 1 <i class="bi bi-check-lg"></i></li>
+            <li data-themeval="customtheme2">Custom theme 2 <i class="bi bi-check-lg"></i></li>
+        </ul>
+    </div>
+
     <div class="drawer" id="drawer">
         <div class="dw-top">
             <div class="dw-account">
@@ -430,6 +447,10 @@
             </a>
         }
     </div>
+
+    
+    <!--LAYOUT STARTS HERE-->
+
     <header>
         <div class="container-fluid header-wrap">
             <div class="drawerbtn-cont">
@@ -473,15 +494,12 @@
                     
                     <div class="account-dropdown">
                         <div class="ad-theme-cont">
-                            <label class="theme-switch">
-                                <input type="checkbox" id="theme-check">
-                                <span class="theme-slider"></span>
-                            </label>
+                            <span>Dark theme</span>
                         </div>
-                        <ul>
+                        <ul class="ad-linklist">
                             @if (userId != null)
                             {
-                                <li><a class="ad-username">@username</a></li>
+                                <li><span class="ad-username">@username</span></li>
                                 <li><a href="/u/@username">Profile</a></li>
                                 <li><a href="/u/@username/saved">Library</a></li>
                                 <li><a href="/u/@username/friends">Friends</a></li>
@@ -520,3 +538,8 @@
 </body>
 
 </html>
+
+<!--<label class="theme-switch">
+    <input type="checkbox" id="theme-check">
+    <span class="theme-slider"></span>
+</label>-->
