--- a/OmneFictio.Web/wwwroot/css/comment_section.scss
+++ b/OmneFictio.Web/wwwroot/css/comment_section.scss
@@ -402,7 +402,7 @@
     max-width: 500px;
     max-height: 90%;
     background-color: var(--background-color2);
-    box-shadow: 0px 0px 14px 4px var(--background-color-boxshadow1);
+    box-shadow: 0px 0px 14px 4px var(--div-boxshadow1);
     border-radius: 20px 20px 10px 10px;
     font-family: "Itim", cursive;
     z-index: 200;
@@ -425,7 +425,7 @@
             cursor: pointer;
             padding: 4px 12px 0px;
             font-size: 1.8rem;
-            text-shadow: 0px 0px 6px var(--text-color-boxshadow1);
+            text-shadow: 0px 0px 6px var(--text-boxshadow1);
         }
     }
 
