--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -650,7 +650,7 @@ main {
             cursor: pointer;
             padding: 10px 14px;
             font-size: 2.2rem;
-            text-shadow: 0px 0px 6px var(--text-color-boxshadow1);
+            text-shadow: 0px 0px 6px var(--text-boxshadow1);
         }
     }
 
@@ -731,7 +731,7 @@ main {
     max-width: 500px;
     max-height: 90%;
     background-color: var(--background-color2);
-    box-shadow: 0px 0px 14px 4px var(--background-color-boxshadow1);
+    box-shadow: 0px 0px 14px 4px var(--div-boxshadow1);
     border-radius: 20px 20px 10px 10px;
     font-family: "Itim", cursive;
     z-index: 200;
@@ -754,7 +754,7 @@ main {
             cursor: pointer;
             padding: 4px 12px 0px;
             font-size: 1.8rem;
-            text-shadow: 0px 0px 6px var(--text-color-boxshadow1);
+            text-shadow: 0px 0px 6px var(--text-boxshadow1);
         }
     }
 
