--- a/OmneFictio.Web/wwwroot/css/profile.scss
+++ b/OmneFictio.Web/wwwroot/css/profile.scss
@@ -439,7 +439,7 @@
                 font-size: 1.2rem;
                 color: var(--text-color1);
                 background-color: var(--background-color2);
-                box-shadow: 0px 0px 6px 0px var(--background-color-boxshadow1);
+                box-shadow: 0px 0px 6px 0px var(--div-boxshadow1);
                 padding: 6px 42px 6px 10px;
                 border: none;
                 outline: none;
