--- a/OmneFictio.Web/wwwroot/css/read.css
+++ b/OmneFictio.Web/wwwroot/css/read.css
@@ -36,7 +36,7 @@ main {
 }
 .posts-cont .post-options .po-option {
   font-size: 1.6rem;
-  text-shadow: 0px 0px 6px var(--text-color-boxshadow1);
+  text-shadow: 0px 0px 6px var(--text-boxshadow1);
   font-family: "Josefin Sans", sans-serif;
   cursor: pointer;
 }
@@ -189,7 +189,7 @@ main {
   left: 0;
   right: 0;
   background-color: var(--background-color2);
-  box-shadow: 0px 0px 6px 0px var(--background-color-boxshadow1);
+  box-shadow: 0px 0px 6px 0px var(--div-boxshadow1);
   flex-direction: column;
   width: 240px;
   border-radius: 20px;
@@ -212,7 +212,7 @@ main {
   cursor: pointer;
   padding: 6px 16px 4px 12px;
   font-size: 1.8rem;
-  text-shadow: 0px 0px 6px var(--text-color-boxshadow1);
+  text-shadow: 0px 0px 6px var(--text-boxshadow1);
 }
 .orderby-cont .obt-body {
   padding: 6px 50px 10px;
@@ -246,7 +246,7 @@ main {
   left: 0;
   right: 0;
   background-color: var(--background-color2);
-  box-shadow: 0px 0px 6px 0px var(--background-color-boxshadow1);
+  box-shadow: 0px 0px 6px 0px var(--div-boxshadow1);
   width: 260px;
   border-radius: 20px;
   font-family: "Itim", cursive;
@@ -295,7 +295,7 @@ main {
   cursor: pointer;
   padding: 6px 12px;
   font-size: 1.8rem;
-  text-shadow: 0px 0px 6px var(--text-color-boxshadow1);
+  text-shadow: 0px 0px 6px var(--text-boxshadow1);
 }
 .filter-cont .f-body {
   padding: 10px 12px 0;
