--- a/OmneFictio.Web/wwwroot/css/theme.css
+++ b/OmneFictio.Web/wwwroot/css/theme.css
@@ -5,15 +5,20 @@
   --background-color-hover2: #4E4E4E;
   --background-color-hover3: #5e5e5e;
   --background-color-hover4: #3b3b3b;
-  --background-color-boxshadow1: #31313150;
   --text-color1: #ffffff;
   --text-color2: #bababa;
   --text-color-hover1: #cccccc;
-  --text-color-boxshadow1: #ffffff50;
-  --text-color-boxshadow2: #ffffff70;
+  --div-boxshadow1: #31313150;
+  --text-boxshadow1: #ffffff50;
+  --text-boxshadow2: #ffffff70;
+  --modal-background: #313131;
+  --modal-line1: #3b3b3b;
+  --modal-item-hover: #373737;
   --headericon-color: #ffffff;
   --accountdropdown-icon-hover: #ffffff10;
   --dropdownbg-color: #313131;
+  --accountdropdown-themeswitcher: #454545;
+  --accountdropdown-themeswitcher-hover: #4f4f4f;
   --shortcuticons-color: #ffffff;
   --navlink-readingtime-color: #415050;
   --navlink-readingtime-color-hover: #607d7d;
@@ -61,15 +66,20 @@
   --background-color-hover2: #c5c5c5;
   --background-color-hover3: #c5c5c5;
   --background-color-hover4: #b5b5b5;
-  --background-color-boxshadow1: #e5e5e550;
   --text-color1: #282828;
   --text-color2: #393939;
   --text-color-hover1: #757575;
-  --text-color-boxshadow1: #00000050;
-  --text-color-boxshadow2: #00000070;
+  --div-boxshadow1: #e5e5e550;
+  --text-boxshadow1: #00000050;
+  --text-boxshadow2: #00000070;
+  --modal-background: #dcdcdc;
+  --modal-line1: #b5b5b5;
+  --modal-item-hover: #d1d8db;
   --headericon-color: #ffffff;
   --accountdropdown-icon-hover:#00000010;
   --dropdownbg-color: #e7e7e7;
+  --accountdropdown-themeswitcher: #d2d2d2;
+  --accountdropdown-themeswitcher-hover: #c1c1c1;
   --shortcuticons-color: #626262;
   --navlink-readingtime-color: #9298b9;
   --navlink-readingtime-color-hover: #777ea8;
@@ -118,11 +128,11 @@
     --background-color-hover2:#4E4E4E;
     --background-color-hover3:#5e5e5e;
     --background-color-hover4:#3b3b3b;
-    --background-color-boxshadow1:#31313150;
+    --div-boxshadow1:#31313150;
 
     --text-color1: #ffffff;
     --text-color2:#bababa;
     --text-color-hover1: #cccccc;
-    --text-color-boxshadow1:#ffffff50;
-    --text-color-boxshadow2:#ffffff70;
+    --text-boxshadow1:#ffffff50;
+    --text-boxshadow2:#ffffff70;
 }*//*# sourceMappingURL=theme.css.map */
