theme choice (full)

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
     @RenderSection("ScriptsHead", required: false)
 </head>
 
-<body class="darkmode">
+<body class="">
     <input type="hidden" id="userid_utility" value="@userId">
     <div id="g_id_onload" data-client_id="589655350334-bdk3rgelbo3i4otkj08f2hvc69g1lql4.apps.googleusercontent.com"
         data-ux_mode="popup" data-callback="googleHandleCredentialResponse" data-skip_prompt_cookie="UserAuth">
@@ -371,7 +371,7 @@
             </div>
         </div>
         <ul>
-            <li data-themeval="darkmode">Dark mode <i class="bi bi-check-lg active"></i></li>
+            <li data-themeval="darkmode">Dark mode <i class="bi bi-check-lg"></i></li>
             <li data-themeval="lightmode">Light mode <i class="bi bi-check-lg"></i></li>
             <li data-themeval="customtheme1">Custom theme 1 <i class="bi bi-check-lg"></i></li>
             <li data-themeval="customtheme2">Custom theme 2 <i class="bi bi-check-lg"></i></li>
