--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -1,5 +1,6 @@
 
-:root{
+//:root
+.darkmode{
     --background-color1: #1D1D1D;
     --background-color2: #313131;
     --background-color-hover1: #373737;
