dynamic show post cover button

--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -148,9 +148,10 @@
                 </div>
                 <div class="p-body">
                     <div class="p-cover">
+                        <span class="p-showCoverBtn">Show cover</span>
                         <img src="" onerror="this.onerror=null; this.closest('.p-cover').remove()">
                     </div>
-                    <span>
+                    <span class="p-desc">
 
                     </span>
                 </div>
