--- a/OmneFictio.Web/wwwroot/css/theme.css
+++ b/OmneFictio.Web/wwwroot/css/theme.css
@@ -1,4 +1,4 @@
-.darkmode {
+:root, .darkmode {
   --background-color1: #1D1D1D;
   --background-color2: #313131;
   --background-color-hover1: #373737;
