--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -784,7 +784,7 @@ header {
                 }
             }
 
-            .ad-username {
+            #loggedin-username {
                 display: block;
                 width: 100%;
                 text-align: center;
