--- a/OmneFictio.Web/wwwroot/css/postitem.scss
+++ b/OmneFictio.Web/wwwroot/css/postitem.scss
@@ -114,12 +114,10 @@
     .p-header {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-        flex-wrap: wrap;
         padding: 10px 0;
 
         .p-title {
+            display: inline;
             padding: 0 10px;
             font-family: 'Josefin Sans', sans-serif;
             font-weight: 600;
@@ -150,7 +148,6 @@
             padding: 0 10px;
             font-size: 1.7rem;
             gap: 20px;
-            margin-left: auto;
 
             i {
                 cursor: pointer;
