Optimized adding reply field

--- a/OmneFictio.Web/wwwroot/css/comment_section.css
+++ b/OmneFictio.Web/wwwroot/css/comment_section.css
@@ -331,6 +331,7 @@
   padding: 0 6px;
 }
 .comment-cont .reply .r-footer .r-evaluation .r-gotoreply {
+  cursor: pointer;
   margin-left: 14px;
   font-family: "Gudea", sans-serif;
   color: var(--text-color1);
