--- a/OmneFictio.Web/wwwroot/css/comment_section.scss
+++ b/OmneFictio.Web/wwwroot/css/comment_section.scss
@@ -358,6 +358,7 @@
                 }
 
                 .r-gotoreply {
+                    cursor: pointer;
                     margin-left: 14px;
                     font-family: 'Gudea', sans-serif;
                     color: var(--text-color1);
